// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tabSize renders 0 1`] = `
Array [
  .c0 {
  tab-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`tabSize renders function 1`] = `
Array [
  .c0 {
  tab-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: has;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: has;
}

<div
    className="c0"
  />,
]
`;

exports[`tabSize renders invalid theme path 1`] = `
Array [
  .c0 {
  tab-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`tabSize renders negative number 1`] = `
Array [
  .c0 {
  tab-size: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`tabSize renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    tab-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    tab-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    tab-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    tab-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    tab-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    tab-size: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    tab-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    tab-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    tab-size: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`tabSize renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    tab-size: July;
  }
}

@media April {
  .c0 {
    tab-size: August;
  }
}

@media January {
  .c0 {
    tab-size: September;
  }
}

@media April {
  .c0 {
    tab-size: November;
  }
}

@media June {
  .c0 {
    tab-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    tab-size: July;
  }
}

@media April {
  .c0 {
    tab-size: August;
  }
}

@media January {
  .c0 {
    tab-size: September;
  }
}

@media April {
  .c0 {
    tab-size: November;
  }
}

@media June {
  .c0 {
    tab-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    tab-size: January;
  }
}

@media April {
  .c0 {
    tab-size: December;
  }
}

@media January {
  .c0 {
    tab-size: April;
  }
}

@media April {
  .c0 {
    tab-size: May;
  }
}

@media June {
  .c0 {
    tab-size: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    tab-size: January;
  }
}

@media April {
  .c0 {
    tab-size: December;
  }
}

@media January {
  .c0 {
    tab-size: April;
  }
}

@media April {
  .c0 {
    tab-size: May;
  }
}

@media June {
  .c0 {
    tab-size: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`tabSize renders postitive number 1`] = `
Array [
  .c0 {
  tab-size: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`tabSize renders string 1`] = `
Array [
  .c0 {
  tab-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: June;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: June;
}

<div
    className="c0"
  />,
]
`;

exports[`tabSize renders valid theme path 1`] = `
Array [
  .c0 {
  tab-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  tab-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
